fix: 修改button的visible

--- a/src/components/button/style/index.less
+++ b/src/components/button/style/index.less
@@ -17,6 +17,9 @@
   &.@{mdfButtonPrefixCls}-disabled { // disabled
     opacity: .4;
   }
+  &.@{mdfButtonPrefixCls}-visible { // disabled
+    display: none;
+  }
 }
 
 .@{mdfButtonPrefixCls} {
